# rust_nextjs_blog

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  init.sql
.github/workflows/: lgtm.yaml  lgtm.yml
server/: Cargo.toml  db.sqlite
server/migrations/: 20230224123109_post.sql
server/src/: db_pool.rs  main.rs  models.rs
server/src/models/: mutation.rs  query.rs
web/: README.md  codegen.ts  package-lock.json  package.json  prettier.config.js
web/src/app/: formatdate.ts  globals.css  gql_client.tsx  header.tsx  layout.tsx  page.tsx  postbody.tsx
web/src/app/articles/[title]/: client-component.tsx  content.tsx  edit.tsx  page.tsx
web/src/app/articles/new/: page.tsx
web/src/app/common/components/: index.tsx
web/src/app/components/: create_post.tsx  gql_client.tsx  post_by_title.tsx  posts.tsx
web/src/app/pages/articles/[title]/: page.tsx
web/src/gql/: fragment-masking.ts  gql.ts  graphql.ts  types.ts
web/src/gql/mutation/: create_post.tsx  update_post.tsx
web/src/gql/query/: post_by_title.tsx  posts.tsx
web/src/lib/: graphql-client.ts
